--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   },
   "devDependencies": {
     "@tauri-apps/cli": "^2",
+    "@types/lokijs": "^1.5.14",
     "@types/node": "^22.10.5",
     "@types/react": "^18.3.1",
     "@types/react-dom": "^18.3.1",
